--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
-numpy
-torchvision
-https://download.pytorch.org/whl/cpu/torch-1.0.0-cp37-cp37m-linux_x86_64.whl
-fastai
-starlette
-uvicorn==0.3.32
-python-multipart
-aiofiles
-aiohttp
+aiofiles==0.5.0
+aiohttp==3.6.2
+asyncio==3.4.3
+fastai==1.0.61
+torch==1.6.0
+torchvision==0.7.0
+numpy==1.19.0
+pillow~=7.2
+python-multipart==0.0.5
+starlette==0.13.6
+uvicorn==0.11.7
